# SignSpeak

./: .gitignore  README.md  demo.py  pyproject.toml  translate.py
.github/workflows/: deploy.yml
apps/cli/: __init__.py  pyproject.toml
apps/cli/src/: __init__.py  main.py
apps/cli/src/commands/: __init__.py  add.py  import_cmd.py  list.py  translate.py  verify.py
apps/cli/src/utils/: __init__.py  config.py  display.py
apps/cli/tests/: conftest.py  test_add_command.py  test_commands.py  test_import_command.py  test_translate_command.py  test_verify_command.py
apps/web/: index.html  package-lock.json  package.json  vite.config.js
apps/web/src/: App.css  App.jsx  index.css
apps/web/src/api/: mockTranslate.js  sigmlLookup.js  signbridge.js
apps/web/src/components/: AvatarPanel.css  AvatarPanel.jsx  GlossAnimation.css  GlossAnimation.jsx  TextInput.css  TextInput.jsx  Transcript.css  Transcript.jsx  VideoPanel.css  VideoPanel.jsx  VideoPlayer.css  VideoPlayer.jsx
apps/web/src/data/: sigmlDictionary.js
apps/web/src/hooks/: useCWASA.js  useCanvasRecorder.js
data/: wlasl_mapping.json
data/signs/verified/FAMILY/: sign.json
data/signs/verified/FRIEND/: sign.json
data/signs/verified/GOOD/: sign.json
data/signs/verified/HAPPY/: sign.json
data/signs/verified/HELLO/: sign.json
research/: asl_grammar.md  bibliography.md  test_corpus.md
scripts/: buildSigmlDictionary.js  download_data.py  extract_poses.py  import_mvp_signs.py  render_signavatars.py  signavatars_setup.py
